day2/nodeselector-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: nodeselector-pod
  name: nodeselector-pod
spec:
  nodeSelector:
    kubernetes.io/hostname: worker01
  containers:
  - image: nginx
    name: nodename-pod
