day2/svc-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: svc-pod
  labels:
    app: python
spec:
  containers:
  - name: pod
    image: marcinkujawski/python-api:1.0
