day2/taint-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: taint-pod
  name: taint-pod
spec:
  tolerations:
  - key: "kubernetes.io/environment" 
    operator: "Equal"
    value: "development"
    effect: "NoSchedule"
  containers:
  - image: nginx
    name: nodename-pod
