day2/test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  labels:
    app: test-pod
spec:
  containers:
    - name: busybox
      image: 'radial/busyboxplus:curl'
      command: [ 'sh', '-c', 'while true; do sleep 3600; done']
