day2/with-pod-affinity.yaml
apiVersion: v1
kind: Pod
metadata:
  name: with-pod-affinity
spec:
  affinity:
    podAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
      - labelSelector:
          matchExpressions:
          - key: run 
            operator: In
            values:
            - taint-pod
        topologyKey: kubernetes.io/country
  containers:
  - name: with-pod-affinity
    image: nginx
