day2/with-pod-antiaffinity.yaml
apiVersion: v1
kind: Pod
metadata:
  name: with-pod-antiaffinity
spec:
  affinity:
    podAntiAffinity:
      preferredDuringSchedulingIgnoredDuringExecution:
      - weight: 100
        podAffinityTerm:
          labelSelector:
            matchExpressions:
            - key: run
              operator: In
              values:
              - taint-pod
          topologyKey: kubernetes.io/country
  containers:
  - name: with-pod-affinity
    image: nginx
